# altaychat

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: build.yml
docs/: ascii-art.txt
server/: package.json  pnpm-lock.yaml  worker.js  wrangler.toml
src/: main.cpp
src/audio/: audio_callback.cpp  audio_context.hpp
src/config/: config.cpp  config.hpp
src/signaling/: signaling_client.cpp  signaling_client.hpp
src/webrtc/: webrtc_manager.cpp  webrtc_manager.hpp
